--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,19 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      TestFirebase
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-input [(ngModel)]="testitem" placeholder="Enter item name"></ion-input>
+  <button ion-button (click)="addItem()">Add Item</button>
+   <ion-list>
+    <ion-item *ngFor="let item of items">
+      {{item.itemname}}
+      <button ion-button clear item-end (click)="editItem(item.$key,item.itemname)">Edit</button>
+      <button ion-button clear item-end (click)="removeItem(item.$key)">Remove</button>
+    </ion-item>
+  </ion-list> 
 </ion-content>
